appId: com.walletconnect.flutterdapp.internal
---
# Launch and verify initial state
- launchApp
- extendedWaitUntil:
    visible: "AppKitModalConnectButton enabled"
    timeout: 15000
- takeScreenshot:
    path: Capture_2

# Wait for connect button to become enabled and verify UI
- assertVisible: "Network"
- assertVisible: "Connect"

# Delete storage so Link Mode is not triggered
- tapOn: "Settings page button
    Settings page icon
    Settings
    Tab 3 of 3"
- tapOn: "CLEAR STORAGE"
- tapOn: "Connect page button
    Connect page icon
    Connect
    Tab 1 of 3"

# Initiate connection and handle modal
- tapOn: "AppKitModalConnectButton enabled"
- extendedWaitUntil:
    visible: "Sign in"
    timeout: 15000
- takeScreenshot:
    path: Capture_3
- waitForAnimationToEnd: # Social/Email is loadinging at this point and could take up to 30 secs
    timeout: 30000
- assertVisible: "Continue with email"
- assertVisible: "Continue with X"
- assertVisible: "AllWallets enabled"

# Tap All wallets and Search for Flutter Sample Wallet
- tapOn: "AllWallets enabled"
- waitForAnimationToEnd
- tapOn: "Search wallet"
- inputText: "Flutter Sample"
- extendedWaitUntil:
    visible: "Flutter Sample Wallet"
    timeout: 15000

# Select wallet and approve
- tapOn: "Flutter Sample Wallet"
- extendedWaitUntil:
    visible: "Reown's AppKit internal would like to connect"
    timeout: 15000
- takeScreenshot:
    path: Capture_4
- tapOn: "Sign All"
- extendedWaitUntil:
    visible: "Disconnect"
    timeout: 15000
- takeScreenshot:
    path: Capture_5

# Confirm app returns to initial state
- assertVisible: "Disconnect"
- assertVisible: "Ethereum"

- tapOn: "Disconnect"
- extendedWaitUntil:
    visible: "Connect"
    timeout: 15000      # Timeout in milliseconds

- assertVisible: "Network"
- assertVisible: "Connect"

# - tapOn: |-
#     Settings page button
#     Settings page icon
#     Settings
#     Tab 3 of 3

# - runFlow:
#     when:
#       visible: "With Socials Switch false"
#     commands:
#         - tapOn: "With Socials Switch false"
#         - waitForAnimationToEnd
#         - assertVisible: "App will be closed to apply changes"
#         - tapOn: "Ok"
#         - killApp # Kills the app (adb shell am kill)
#         - launchApp
#         - tapOn: |-
#             Settings page button
#             Settings page icon
#             Settings
#             Tab 3 of 3
#         - assertVisible: "With Socials Switch true"
# - runFlow:
#     when:
#       visible: "With Socials Switch true"
#     commands:
#         - tapOn: "With Socials Switch true"
#         - waitForAnimationToEnd
#         - assertVisible: "App will be closed to apply changes"
#         - tapOn: "Ok"
#         - killApp # Kills the app (adb shell am kill)
#         - launchApp
#         - tapOn: |-
#             Settings page button
#             Settings page icon
#             Settings
#             Tab 3 of 3
#         - assertVisible: "With Socials Switch false"

# - tapOn: |-
#     Connect page button
#     Connect page icon
#     Connect
#     Tab 1 of 3