appId: com.walletconnect.flutterdapp.internal
---

# Launch and verify initial state
- launchApp
- extendedWaitUntil:
    visible: "AppKitModalConnectButton enabled"
    timeout: 30000

# Wait for connect button to become enabled and verify UI
- assertVisible: "Network"
- assertVisible: "Connect"

# Delete storage so Link Mode is not triggered
- tapOn: "Settings page button
    Settings page icon
    Settings
    Tab 3 of 3"
- tapOn: "CLEAR STORAGE"

# Check if Link Mode is enabled
- runFlow:
    when:
      visible: "appkit_sample_linkmode_true"
    commands:
        - tapOn: "Connect page button
            Connect page icon
            Connect
            Tab 1 of 3"
        - waitForAnimationToEnd:
            timeout: 30000
- runFlow:
    when:
      visible: "appkit_sample_linkmode_false"
    commands:
        - tapOn:
            id: "appkit_sample_linkmode_false"
        - waitForAnimationToEnd:
            timeout: 30000
        - tapOn: "Ok"
        - launchApp
        - extendedWaitUntil:
            visible: "AppKitModalConnectButton enabled"
            timeout: 30000

# Initiate connection and handle modal
- tapOn: "AppKitModalConnectButton enabled"
- extendedWaitUntil:
    visible: "Sign in"
    timeout: 30000
- waitForAnimationToEnd:
    timeout: 30000
- assertVisible: "Continue with email"
- assertVisible: "Continue with X"
- assertVisible: "AllWallets enabled"
